<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_logout"
            android:icon="@drawable/logout_drawer_icon"
            android:title="@string/logout"/>

        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/home_drawer_icon"
            android:title="@string/home"/>

        <item
            android:id="@+id/drawer_users"
            android:icon="@drawable/users_drawer_icon"
            android:title="@string/users_title"/>

        <!--implemented on the website for now-->
        <!--<item-->
            <!--android:id="@+id/drawer_account"-->
            <!--android:icon="@drawable/account_drawer_icon"-->
            <!--android:title="@string/account_title"/>-->


        <item
            android:id="@+id/drawer_global_settings"
            android:icon="@drawable/global_settings_drawer_icon"
            android:title="@string/global_settings_title"/>

    </group>
</menu>