<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/main_parent_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/msc_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeToolbar"
            app:theme="@style/ThemeToolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.linksprite.io.device.view.WaterText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/water_test"
                android:id="@+id/test_water"/>

            <android.support.v7.widget.CardView
                style="@style/button_led_card"
                android:layout_margin="10dp"
                android:id="@+id/card_water">

                <TextView
                    android:id="@+id/tv_water"
                    style="@style/button_tv"
                    android:layout_gravity="center"
                    android:text="@string/water_led" />
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/breathing_test"
                android:id="@+id/test_breathing"/>

            <android.support.v7.widget.CardView
                style="@style/button_led_card"
                android:layout_margin="10dp"
                android:id="@+id/card_breathing">

                <TextView
                    android:id="@+id/tv_breathing"
                    style="@style/button_tv"
                    android:layout_gravity="center"
                    android:text="@string/breathing_led" />
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/blink_test"
                android:id="@+id/test_blink"/>

            <android.support.v7.widget.CardView
                style="@style/button_led_card"
                android:layout_margin="10dp"
                android:id="@+id/card_blink">

                <TextView
                    android:id="@+id/tv_blink"
                    style="@style/button_tv"
                    android:layout_gravity="center"
                    android:text="@string/blink_led"
                 />
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/custom_test"
                android:id="@+id/test_custom"/>

            <android.support.v7.widget.CardView
                style="@style/button_led_card"
                android:layout_margin="10dp"
                android:id="@+id/card_custom">

                <TextView
                    android:id="@+id/tv_custom"
                    style="@style/button_tv"
                    android:layout_gravity="center"
                    android:text="@string/custom_led"
                 />
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>