<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/circular_corner_dialog"
        android:orientation="vertical">

        <TextView
            style="@style/settings_section_header"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/led_setting_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/total_number"
                android:textSize="@dimen/new_settings_text_size" />

            <EditText
                android:id="@+id/edt_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_edittext"
                android:padding="10dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/liner_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/led_time"
                    android:textColor="@color/medium_grey" />

                <TextView
                    android:id="@+id/breathing_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/medium_grey" />


            </LinearLayout>

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/time_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/noise_titles"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                app:dsb_max="100"
                app:dsb_value="0" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/liner_num">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/led_start_num"
                    android:textSize="@dimen/new_settings_text_size" />

                <EditText
                    android:id="@+id/edt_number_start"
                    android:background="@drawable/bg_edittext"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/led_end_num"
                    android:textSize="@dimen/new_settings_text_size" />

                <EditText
                    android:id="@+id/edt_number_end"
                    android:background="@drawable/bg_edittext"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/liner_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/led_color"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/new_settings_text_size" />

            <Spinner
                android:id="@+id/led_color_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#FFFFFFFF"
            android:layout_margin="10dp">

            <android.support.v7.widget.CardView
                android:id="@+id/confirm_button"
                style="@style/button_card"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="40dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        style="@style/button_tv"
                        android:text="@string/confirm" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/cancel_button"
                style="@style/button_card"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        style="@style/button_tv"
                        android:text="@string/cancel" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>